# smag-mvp

./: .dockerignore  .drone.yml  .env  .gitignore  .travis.yml  CONTRIBUTING.md  Dockerfile  Makefile  Pipfile  README.md  build_and_upload_image.sh  cities.json  docker-compose.yml  elastic-compose.yml  go.mod  go.sum  insert_seed.Dockerfile  insert_seed.py  insta-compose.yml  main.go  neo4j-custom.json  neo4j.json  package-lock.json  postgres_setup.sh  pull_request_template.md  scraper.py  test.json  tweets_scraper.py  twitter-compose.yml  user_scraper.Dockerfile  user_scraper.py
.circleci/: config.yml
.github/: pull_request_template.md
api/: API.md  Makefile  README.md  grpc_server.go
awsService/: Dockerfile  renewing-address.go  renewing-addresses.go
aws_service/: Dockerfile  renewing-address.go
cli/: Dockerfile
config/: config.go  postgres-config.go  s3-config.go
db/: README.md  utils.go
debezium/: Dockerfile  kube-start-postgres.sh  register-postgres.json  start-postgres.sh
dgraph-extractor/: Dockerfile  extractor.go
dgraph-inserter/: Dockerfile  inserter.go
elastic/: indicies.go  mapping.go  utils.go
elastic-search/: docker-compose.yml
es/: face_search_client.go  faces_index.go
es_face-indexer/: Dockerfile  indexer.go
face-recognition/: Dockerfile  worker.go
test/: main.go
twitter_scraper/: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
twitter_scraper/twitterscraper/: followers_scraper.py  following_scraper.py  insert_seed.py  scraper_manager.py  tweets_scraper.py  user_scraper.py  users_scraper.py  utils.py
(+446 files in other folders)
